@@ -48,6 +48,7 @@ man1DOCBOOK = \
 	attach.xml \
 	attr.xml \
 	autoview.xml \
+	bbsize.xml \
 	bev.xml \
 	bo.xml \
 	bolt.xml \
